# dockey

./: .gitignore  LICENSE  README.md  bugs.txt  main.py  pkg.yaml  pyproject.toml  requirements.txt  win.spec
.github/workflows/: build.yml
data/: las2.pdbqt
docs/: conf.py  docking.rst  index.rst  input.rst  installation.rst  overview.rst  pose.rst  prepare.rst  project.rst  requirements.txt  settings.rst  visualization.rst
docs/_build/doctrees/: docking.doctree  environment.pickle  index.doctree  input.doctree  installation.doctree  (+7 more)
docs/source/: conf.py  convert_svg_2_png.py  docking.rst  index.rst  installation.rst  interaction.rst  introduction.rst  overview.rst  pose.rst  prepare.rst  project.rst  visualization.rst
example/: ligand1.sdf  ligand2.sdf  ligand3.sdf  ligand_DB06786.sdf  ligand_DB13063.sdf
hooks/: __hook-rdkit.py  hook-meeko.py  hook-openbabel.py  hook-openmm.py  hook-pdb2pqr.py  hook-pdbfixer.py  hook-propka.py  hook-pymol.py  hook-rdkit.py  pyi_rth_openbabel.py
package/: build.spec  build_linux.spec  build_linux_desktop.sh  build_mac.spec  build_mac_installer.sh  build_win.spec  build_win_installer.iss  slim_meeko.py
src/: backend.py  config.py  db.py  dd.dky  gridbox.py  icons.qrc  main.py  param.py  plugins.py  prepare.py  process.py  pymolplugins.py  pymolview.py  rc_icons.py  requirements.txt  setting.py  table.py  test.py  utils.py  view.py  widget.py  win.spec  window.py  worker.py
src/hooks/: hook-pymol.chempy.py
src/icons/: dock.icns  logo.icns
wheels/: Pmw-2.0.1-py3-none-any.whl  apsw-3.36.0-cp38-cp38-win_amd64.whl
(+22 files in other folders)
