[project]
name = "dockey"
version = "1.0.5"
description = "A user-friendly tool for molecular docking"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apsw==3.51.1.0",
    "autodocktools-py3",
    "meeko==0.5.1",
    "numpy==1.23.5",
    "openbabel",
    "openmm==8.2.0",
    "pandas==1.5.3",
    "pdb2pqr==3.6.2",
    "pdbfixer>=1.12.0",
    "plip==2.3.0",
    "psutil==5.9.8",
    "pyinstaller==6.20.0",
    "pymol",
    "pyside6-essentials==6.4.3",
    "rdkit==2023.9.5",
    "requests==2.34.2",
    "scipy==1.15.3",
]

[tool.uv.sources]
pymol = { path = "C:/Users/lmdu/Desktop/pymol-2.6.0a0-cp310-cp310-win_amd64.whl" }
autodocktools-py3 = { path = "../AutoDockTools_py3", editable = true }
openbabel = { path = "C:/Users/lmdu/Desktop/openbabel-3.1.1-cp310-cp310-win_amd64.whl" }
